package SolarSystem;

public class Consts {
    public static final double G = 6.67 * Math.pow(10.0, -11.0); // meters seconds killgorams
}
